[package]
name = "pack_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
num_cpus = "1.16.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
walkdir = "2.3.3"
zip = "0.6.6"
zip_archive = "1.2.2"
